cmake_minimum_required(VERSION 4.1)
project(CompetitiveProgramming)

set(CMAKE_CXX_STANDARD 20)

add_executable(CompetitiveProgramming
        UVa/11172/main.cpp
        UVa/406/main.cpp
        UVa/10852/main.cpp
        UVa/913/main.cpp
        UVa/10490/main.cpp
        UVa/914/main.cpp
        UVa/1644/main.cpp
        UVa/10650/main.cpp
        UVa/10311/main.cpp)
